--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,12 @@ edition = "2018"
 
 [dependencies]
 ring = "0.16.19"
-structopt = "0.3.21"
 walkdir = "2.3.1"
 threadpool = "1.8.1"
 ansi-escapes = "0.1.0"
 ctrlc = "3.1.8"
 num_cpus = "1.13.0"
+image = "0.24.3"
+clap = { version = "3.2.22", features = ["derive"] }
+image_hasher = "1.0.0"
+itertools = "0.10.5"
